<resources>
    <string name="app_name">RSQIS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="name">name</string>
    <string name="not_registered">Not Registered Yet?</string>
    <string name="upload_proof">Upload Proof</string>
    <string name="describe_the_issue">Describe the issue:</string>
    <string name="take_photo">Take Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="upload">Upload</string>
    <string name="take_video">Take Video</string>
    <string name="view_photo">View Photo</string>
    <string name="view_video">View Video</string>
    <string name="logout">Logout</string>
    <string name="enter_the_address">Enter the address:</string>
    <string name="register_your_issue">Register your issue:</string>
    <string name="enter_the_address_of_the_road">Enter the address of the road:</string>
    <string name="host">http://192.168.43.18:3000/worker/</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="register_here">Register Here!</string>
    <string name="submit">Submit</string>
    <string name="registered">Registered:</string>
    <string name="enter_the_current_location">Enter The Current Location:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="email_id">Email-id</string>
    <string name="enter_your_registered_email_id">Enter your Registered Email-id:</string>
    <string name="invalid_name">Please enter a valid First Name</string>
    <string name="invalid_lastname">Please enter valid Last Name</string>
    <string name="invalid_password">Password should contain minimum 6 characters including 1 UpperCase character</string>
    <string name="invalid_phone">Please enter a valid Moblie Number</string>
    <string name="invalid_email">Please enter a valid Email Address</string>
    <string name="invalid_conf">Password doesn\'t match</string>
    <string name="my_work">My Work</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_map2">Map</string>
    <string name="title_activity_map3">Map</string>
    <string name="title_activity_map4">Map</string>
    <string name="club_o7_road">ClubO7 Road</string>
    <string name="aarohi_residency_road">Aarohi Residency</string>
    <string name="suncity_road">Suncity Road</string>
    <string name="safal_parisar_road">Safal Road</string>
    <string name="negative_response">Negative Response</string>
    <string name="positive_response">Positive Response</string>

</resources>
