<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".login">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:hint="@string/email_address"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:background="#ffffff"
        android:hint="@string/password"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:background="#87BEF0"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/password"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:textSize="18dp"
            android:text="@string/forgot_password"
            android:textColor="#87BEF0"
            android:textStyle="bold" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/textview_notregistered"
            android:textSize="15dp"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:text="@string/not_registered"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/textview_register"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:textSize="16dp"
            android:text="@string/register_here"
            android:textStyle="bold"
            android:textColor="#87BEF0" />
        </LinearLayout>


</LinearLayout>