<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ForgotPassword">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:text="@string/enter_your_registered_email_id"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:hint="@string/email_id"
        android:paddingLeft="2dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="2dp"
        android:text="Note:  You will be sent an email shortly containing your password to your registered email-id"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="italic" />
    <Button
        android:id="@+id/button_submit"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#87BEF0"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>